--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "lövelauncher.path": "D:\\love-11.4-win64/love.exe",
   "Lua.runtime.version": "LuaJIT",
   "Lua.workspace.library": ["${3rd}/love2d/library"],
-  "Lua.workspace.checkThirdParty": false
+  "Lua.workspace.checkThirdParty": false,
+  "Lua.diagnostics.globals": ["new_globals", "exclude_files"]
 }
